<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.natebeard.finalpractice.MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:ems="10"
        android:layout_marginTop="15dp"
        android:id="@+id/nameTextEdit"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameTextEdit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:id="@+id/moodSpinner"
        android:entries="@array/mood" />

    <ToggleButton
        android:text="ToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/moodSpinner"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:textOn="@string/toggle_on"
        android:textOff="@string/toggle_off"
        android:id="@+id/toggleButton2" />

    <Switch
        android:text="@string/read_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/toggleButton2"
        android:layout_alignParentEnd="true"
        android:id="@+id/switch2" />

    <TextView
        android:text="@string/drink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toggleButton2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:id="@+id/textView2" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:id="@+id/drinks_radio_group">

        <RadioButton
            android:text="@string/beer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton3" />

        <RadioButton
            android:text="@string/wine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:id="@+id/radioButton4" />
    </RadioGroup>

    <TextView
        android:text="@string/when"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:id="@+id/textView3" />

    <CheckBox
        android:text="@string/happy_hour_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:id="@+id/happyHourCheck" />

    <CheckBox
        android:text="@string/dinner_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/happyHourCheck"
        android:layout_centerHorizontal="true"
        android:id="@+id/dinnerCheck" />

    <Button
        android:text="@string/who_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dinnerCheck"
        android:layout_marginTop="19dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/button2"
        android:onClick="findWho"/>

    <TextView
        android:text="@string/who_are_you_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/youAreTextView" />

    <Button
        android:text="@string/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/nextActivityButton"
        android:onClick="nextActivity"
        android:visibility="invisible"/>


</RelativeLayout>
