<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_get_place"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.natebeard.finalpractice.GetPlaceActivity">

    <TextView
        android:text="@string/you_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:id="@+id/youLikeTextView" />

    <Button
        android:text="@string/yes_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/youLikeTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:id="@+id/yesButton"
        android:onClick="yesFindPartyPlace"/>

    <TextView
        android:text="@string/click_here_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:id="@+id/checkOutTextView"
        android:layout_below="@+id/yesButton"
        android:layout_alignStart="@+id/yesButton"
        android:visibility="invisible"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp"
        android:onClick="goToWebsite"/>




</RelativeLayout>
